src/test/deca/context/valid/class/37-declFieldCompatible2.deca
/* Description:
    teste la regle (3.7) de la vérification contextuelles
    Déclaration de champ avec initialisation compatibles

    Historique:
      cree le 21/01/2020
*/

class A {
  Object a = new E(); // E est un sous type d'objet
  A b = new D(); // D est un sous type de A

}

class B extends A {
}
class C extends A{
}
class D extends B{
}

class E extends D {
}
