src/test/deca/context/invalid/class/61-declFieldIncompatible3.deca
n's/* Description:
    teste la regle (3.7) de la vérification contextuelles
    Déclaration de champ avec initialisation incompatibles

    Historique:
      cree le 21/01/2020
*/

class A {
  D d = new A(); // A n'est pas un sous type de D

}
class B extends A {

}
class C extends A {

}
class D extends C {

}
